--- a/assets/main.css
+++ b/assets/main.css
@@ -7,7 +7,7 @@ textarea {
     "Helvetica Neue", Arial, sans-serif;
 }
 
-// sticky footer
+ 
 .content {
   min-height: calc(100vh - 50px);
 }
@@ -16,7 +16,7 @@ footer {
   height: 50px;
 }
 
-// nav
+ 
 
 nav {
   padding: 5px 60px;
@@ -27,24 +27,27 @@ nav {
   display: flex;
   justify-content: space-between;
 
-  a {
-    color: white;
-    text-decoration: none;
-  }
 
-  ul {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    padding: 0;
 
-    li {
-      padding-right: 40px;
-    }
+  
+}
+nav li {
+    padding-right: 40px;
   }
+ 
+nav ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+ 
 }
 
-// page layout
+nav  a {
+  color: white;
+  text-decoration: none;
+}
+ 
 
 .row {
   margin: 30px 0 60px;
@@ -56,7 +59,7 @@ nav {
   grid-row-gap: 0px;
 }
 
-// buttons
+ 
 
 button {
   background: #098191;
@@ -101,7 +104,7 @@ button:focus {
   padding: 0.5rem 1rem;
 }
 
-// form elements
+ 
 
 input[type="number"] {
   width: 50px;
@@ -122,14 +125,14 @@ fieldset {
   margin: 15px 0;
   line-height: 1.6;
 
-  span {
-    font-size: 14px;
-    padding: 8px 12px;
-    border-radius: 1000px;
-    background: #d50813;
-    color: white;
-    font-weight: bold;
-  }
+}
+.label span {
+  font-size: 14px;
+  padding: 8px 12px;
+  border-radius: 1000px;
+  background: #d50813;
+  color: white;
+  font-weight: bold;
 }
 
 select {
@@ -143,15 +146,16 @@ footer {
   color: white;
   text-align: center;
 
-  a,
-  a:visited,
-  a:active {
-    color: #c4c3ec;
-    font-weight: bold;
-  }
+ 
+}
+footer  a,
+a:visited,
+a:active {
+  color: #c4c3ec;
+  font-weight: bold;
 }
 
-// table styles
+ 
 
 table {
   border: 1px solid #ccc;
@@ -235,7 +239,7 @@ table th {
   }
 }
 
-// comma separated lists
+ 
 
 .comma:not(:first-child) {
   margin-left: -0.15rem;
@@ -250,7 +254,7 @@ table th {
   margin: 0.15rem;
 }
 
-// numerical styles
+ 
 
 .smallnum {
   position: absolute;
@@ -270,7 +274,7 @@ table th {
   font-weight: bold;
 }
 
-// toast
+ 
 
 .toast {
   background: #a8060e;
@@ -282,73 +286,78 @@ table th {
   right: 0;
   text-align: center;
 
-  a {
-    color: white;
-    font-weight: bold;
-    text-decoration: none;
-  }
+ 
+}
+.toast  a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 /* Page-specific styles */
 
-.restaurant {
-  .restaurantheading {
-    margin: 100px 0 20px 200px;
-    display: flex;
-    align-items: center;
-  }
-
-  h1 {
-    font-size: 30px;
-    margin-right: 40px;
-  }
-
-  .filter {
+.restaurant.filter {
     padding-right: 200px;
-  }
+ 
 }
 
-// restaurant info
+.restaurant   .restaurantheading {
+  margin: 100px 0 20px 200px;
+  display: flex;
+  align-items: center;
+}
+.restaurant  h1 {
+  font-size: 30px;
+  margin-right: 40px;
+}
+
+ 
 
 section.restaurantinfo {
   padding: 20px 200px;
 
-  .items {
-    height: 250px;
-    border-radius: 5px;
-    background-size: cover;
-    position: relative;
-    box-shadow: 2px 6px 6px 0 rgb(215, 215, 215);
-  }
 
-  .iteminfo {
-    background: white;
-    width: 100%;
-    padding: 15px;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: space-between;
-  }
+
 }
 
-//cart page
+section.restaurantinfo.items {
+  height: 250px;
+  border-radius: 5px;
+  background-size: cover;
+  position: relative;
+  box-shadow: 2px 6px 6px 0 rgb(215, 215, 215);
+}
+section.restaurantinfo.iteminfo {
+  background: white;
+  width: 100%;
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+}
 
+ 
+ 
 .cart.container {
   padding: 100px;
   max-width: 1000px;
   margin: 0 auto;
 
-  h2 {
-    text-align: center;
-  }
 
-  .total {
-    font-weight: bold;
-  }
 
-  .emptycart {
-    text-align: center;
-    line-height: 2;
-  }
+
+}
+
+
+.cart.container h2 {
+  text-align: center;
+}
+
+.cart.container.total {
+  font-weight: bold;
+}
+.cart.container.emptycart {
+  text-align: center;
+  line-height: 2;
 }
